fix budget visuals overflow issue

--- a/components/cards/styles/_BudgetsInfoCard.scss
+++ b/components/cards/styles/_BudgetsInfoCard.scss
@@ -27,7 +27,6 @@
     width: 100%;
 
     gap : $spacing-md;
-    padding-inline: 1em;
 }
 
 @media (max-width : 768px) {
