--- a/components/cards/styles/_CardVisuals.scss
+++ b/components/cards/styles/_CardVisuals.scss
@@ -4,6 +4,7 @@
     display: flex;
     position: relative;
     width: 100%;
+    margin-left: 22px;
 
     &::before {
         content: '';
